# GridHook-Agent

./: .gitignore  .gitmodules  README.md  docker-compose.yml  dockerfile  example.env  foundry.toml  remappings.txt  startup.sh
agent/: README.md  pyproject.toml
agent/src/: config.py  main.py  pending_orders.py  place_order.py  swap.py  z.py
agent/src/abi/: GridHook_abi.json  IPoolManager_abi.json  PoolManager.json  PoolSwapTest.json
agent/src/utils/: contract_functions.py  initialize_web3.py  llm.py  load_abi.py  parse_deployment.py
script/: Anvil.s.sol
src/: GridHook.sol
test/: GridHook.t.sol
test/utils/: EasyPosm.t.sol
